--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="yj@todo.todo">yj</maintainer>
+  <maintainer email="yj@hahaah.todo">yj</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -49,13 +49,30 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>move_base_msgs</build_depend>
+  <build_depend>fiducial_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>robot_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
+
+
+  <build_export_depend>move_base_msgs</build_export_depend>
+  <build_export_depend>fiducial_msgs</build_export_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>robot_msgs</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
+
+
+  <exec_depend>move_base_msgs</exec_depend>
+  <exec_depend>fiducial_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>robot_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
 
