--- a/package.xml
+++ b/package.xml
@@ -50,6 +50,8 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   <build_depend>move_base_msgs</build_depend>
   <build_depend>fiducial_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
@@ -58,7 +60,8 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
 
-
+  <build_export_depend>actionlib</build_export_depend>
+  <build_export_depend>actionlib_msgs</build_export_depend>
   <build_export_depend>move_base_msgs</build_export_depend>
   <build_export_depend>fiducial_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
@@ -67,7 +70,8 @@
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
 
-
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>move_base_msgs</exec_depend>
   <exec_depend>fiducial_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
